2011-01-20  John W. Eaton  <jwe@octave.org>

	* plot/ginput.m, plot/gnuplot_drawnow.m, plot/uiputfile.m,
	plot/subplot.m, plot/axis.m, plot/colorbar.m,
	plot/__print_parse_opts__.m, plot/uigetdir.m,
	plot/__fltk_print__.m, plot/print.m, plot/__gnuplot_print__.m,
	plot/uigetfile.m, plot/private/__actual_axis_position__.m:
	Update for backend -> graphics_toolkit change.

	* plot/graphics_toolkit.m: Rename from backend.m.
	* plot/module.mk (plot_FCN_FILES): Update list.

2011-01-19  Rik  <octave@nomad.inbox5.com>


	* general/curl.m, general/divergence.m, io/strread.m,
	miscellaneous/mkoctfile.m, plot/bar.m, plot/errorbar.m, plot/hist.m,
	plot/mesh.m, plot/surf.m, polynomial/polyaffine.m: Correct spelling
	in docstrings.

2011-01-19  John W. Eaton  <jwe@octave.org>

	* help/help.m: New option --list.  Bug #31905.

2011-01-19  John W. Eaton  <jwe@octave.org>

	* io/strread.m: Avoid PCRE-ism in regexp.  Bug #32066.

2011-01-17  Rik  <octave@nomad.inbox5.com>

	* audio/wavread.m, deprecated/spqr.m, elfun/lcm.m, general/bitget.m,
	general/curl.m, general/divergence.m, general/interp3.m,
	general/quadv.m, geometry/delaunayn.m, geometry/griddata.m,
	help/help.m, io/textread.m, io/textscan.m, linear-algebra/cond.m,
	miscellaneous/mkoctfile.m, miscellaneous/orderfields.m,
	miscellaneous/run.m, miscellaneous/setappdata.m, plot/axis.m,
	plot/caxis.m, plot/daspect.m, plot/ellipsoid.m, plot/errorbar.m,
	plot/gnuplot_binary.in, plot/hist.m, plot/hold.m, plot/ishold.m,
	plot/legend.m, plot/mesh.m, plot/pbaspect.m, plot/pie3.m, plot/print.m,
	plot/private/__add_default_menu__.m, plot/scatter.m, plot/scatter3.m,
	plot/shg.m, plot/slice.m, plot/surf.m, plot/surfl.m, plot/uigetdir.m,
	plot/uigetfile.m, plot/uimenu.m, plot/uiputfile.m, plot/view.m,
	set/unique.m, signal/periodogram.m, sparse/pcg.m, sparse/pcr.m,
	sparse/spfun.m, specfun/legendre.m,
	statistics/distributions/poisspdf.m, statistics/distributions/wblpdf.m,
	strings/strjust.m, strings/untabify.m, testfun/assert.m,